# Evez666

./: .env.example  .env.phase2.example  .gitignore  AI_TO_AI_REVENUE.md  AUTOMATION.md  AUTOMATION_ASSISTANT_README.md  AUTONOMOUS_CONSCIOUSNESS_OPERATIONS.md  COGNITIVE_ENGINE_COMPLETE.md  CONSCIOUSNESS_SYSTEM_README.md  DEPLOYMENT_GUIDE.md  ENTITY_HEALING_IMPLEMENTATION.md  ENTITY_PROPAGATION_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS_REPORT.md  HANDSHAKEOS_E_ARTIFACT_INVENTORY.md  HANDSHAKEOS_E_IMPLEMENTATION_SUMMARY.md  HANDSHAKEOS_IMPLEMENTATION_COMPLETE.md  HONEST_INVENTORY_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_VIRAL_GROWTH.md  INCOME_GENERATION_SYSTEM.md  NEGATIVE_LATENCY_IMPLEMENTATION_SUMMARY.md  NEGATIVE_LATENCY_QUICKSTART.md  PERFORMANCE_IMPROVEMENTS.md  PHASE2_SUMMARY.md  PROFILE_README.md  QUANTUM_THREAT_IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_SPONSORS.md  README.md  SAMSUNG_GALAXY_A16_GUIDE.md  SOUL.md  SPONSORS.md  TEST_RESULTS_REPORT.md  VULNERABILITY_ENSLAVEMENT_IMPLEMENTATION.md  agent_brain_retry.py  ai_to_ai_marketplace.py  audit_log_analyzer.py  automation_assistant.py  automation_assistant_demo.py  autonomous_consciousness_engine.py  (+26 more)
.circleci/: config.yml
android/: README.md  (+7 more)
recursive-observer/: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
recursive-observer/.github/workflows/: ci.yml
recursive-observer/examples/: analyze_self.py  recursive_collapse.py  traced_execution.py
recursive-observer/tests/: test_introspect.py  test_observer_effect.py  test_recursive.py  test_transformer.py
(+509 files in other folders)
