[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recursive-observer"
version = "0.1.0"
description = "Recursive self-measuring program observer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Recursive Observer" }]
keywords = ["introspection", "observer", "reflection", "ast"]
dependencies = [
  "radon>=6.0.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
recursive-observer = "recursive_observer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/recursive_observer"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra"
